Added GtkSpell to extra

--- a/xcl/Makefile
+++ b/xcl/Makefile
@@ -3,6 +3,7 @@ FPC=ppc386
 
 all: xcl.ppu xcldb.ppu
 	make -C tools
+	make -C extra
 	make -C tests
 
 xcl.ppu: xcl.pas *.inc
@@ -16,4 +17,5 @@ run: xcl.ppu
 clean:
 	rm -f *~ *.ppu *.o ppas.sh core
 	make -C tools clean
+	make -C extra clean
 	make -C tests clean
