Updated Makefiles: - Use 'fpc' instead of ppc386; - Use .o for executable files, so make works fine on Win32.

--- a/xcl/tests/Makefile
+++ b/xcl/tests/Makefile
@@ -5,16 +5,16 @@ EXTRA_PATH=$(XCL_PATH)/extra
 XRC=$(XCL_PATH)/tools/xrc
 
 OPT=-Fu$(XCL_PATH) -Fu$(EXTRA_PATH)
-FPC=ppc386
+FPC=fpc
 
-all: test1 testtv
+all: test1.o testtv.o
 	make -C editor
 	make -C db
 
-test1: test1.pas test1_xrc.pp
+test1.o: test1.pas test1_xrc.pp
 	$(FPC) $(OPT) test1.pas
 
-testtv: testtv.pas testtv_xrc.pp
+testtv.o: testtv.pas testtv_xrc.pp
 	$(FPC) $(OPT) testtv.pas
 
 test1_xrc.pp: test1.frm
@@ -24,9 +24,9 @@ testtv_xrc.pp: testtv.frm
 	$(XRC) testtv.frm $@
 
 clean:
-	rm -f *~ *.ppu *.o *.xrc *_xrc.pp ppas.sh core test1 testtv
+	rm -f *~ *.ppu *.o *.exe *_xrc.pp ppas.sh core test1 testtv
 	make -C editor clean
 	make -C db clean
 
-run: test1
+run: test1.o
 	./test1
