Added TForm.DoIdle; Changes on Makefiles;

--- a/xcl/tests/db/Makefile
+++ b/xcl/tests/db/Makefile
@@ -3,16 +3,16 @@ XCL_PATH=../..
 XRC=$(XCL_PATH)/tools/xrc
 
 OPT=-Fu$(XCL_PATH)
-FPC=ppc386
+FPC=fpc
 
-all: dbtest
+all: dbtest.o
 
-dbtest: *.pas main.frm
+dbtest.o: *.pas main.frm
 	$(XRC) main.frm dbtest_xrc.pp
 	$(FPC) $(OPT) dbtest.pas
 
 clean:
-	rm -f *~ *.ppu *.xrc *_xrc.pp *.o ppas.sh core dbtest
+	rm -f *~ *.ppu *.exe *_xrc.pp *.o ppas.sh core dbtest
 
-run: dbtest
+run: dbtest.o
 	./dbtest
