--- a/xcl/tests/editor/Makefile
+++ b/xcl/tests/editor/Makefile
@@ -3,18 +3,18 @@ XCL_PATH=../..
 XRC=$(XCL_PATH)/tools/xrc
 
 OPT=-Fu$(XCL_PATH)
-FPC=ppc386
+FPC=fpc
 
-all: editor
+all: editor.o
 
-editor: *.pas editor_xrc.pp
+editor.o: *.pas editor_xrc.pp
 	$(FPC) $(OPT) editor.pas
 
 editor_xrc.pp: main.frm
 	$(XRC) main.frm $@
 
 clean:
-	rm -f *~ *.ppu *.xrc *_xrc.pp *.o ppas.sh core editor
+	rm -f *~ *.ppu *.exe *_xrc.pp *.o ppas.sh core editor
 
-run: editor
+run: editor.o
 	./editor
