--- a/xcl/tools/Makefile
+++ b/xcl/tools/Makefile
@@ -3,7 +3,7 @@ OPT=-Fu$(XCL_PATH)
 FPC=ppc386
 XRC=./xrc
 
-all: xrc.o gtkpas.o
+all: xrc.o gtkpas.o xmkskel.o
 
 xrc.o: xrc.pas
 	$(FPC) $(OPT) xrc.pas
@@ -11,5 +11,8 @@ xrc.o: xrc.pas
 gtkpas.o: gtkpas.pas
 	$(FPC) $(OPT) gtkpas.pas
 
+xmkskel.o: xmkskel.pas
+	$(FPC) $(OPT) xmkskel.pas
+
 clean:
-	rm -f *~ *.ppu *.o *.exe ppas.sh core xrc gtkpas
+	rm -f *~ *.ppu *.o *.exe ppas.sh core xrc gtkpas xmkskel
