--- a/docs/Makefile
+++ b/docs/Makefile
@@ -15,10 +15,10 @@ xcldb.xml: $(XCL_PATH)/xcldb.pas $(XCL_PATH)/*.inc
 html: html/index.html
 
 html/index.html: xcl.xml xcldb.xml
-	$(FPDOC) --input="-Fi../xcl/ ../xcl/xcl.pas" --descr="xcl.xml" --input="-Fi../xcl/ ../xcl/xcldb.pas" --descr="xcldb.xml" --package=xcl --format=html --output=html
+	$(FPDOC) --hide-protected --input="-Fi../xcl/ ../xcl/xcl.pas" --descr="xcl.xml" --input="-Fi../xcl/ ../xcl/xcldb.pas" --descr="xcldb.xml" --package=xcl --format=html --output=html
 
 rsync:
-	rsync -rcvz html judison@shell.sourceforge.net:/home/groups/x/xc/xcl/htdocs/docs
+	rsync -rcvz --delete html judison@shell.sourceforge.net:/home/groups/x/xc/xcl/htdocs/docs
 
 clean:
 	rm -fr *~ core html/*.html html/xcl html/xcldb
