Initial restructuration of XDE

--- a/xde/Makefile
+++ b/xde/Makefile
@@ -6,7 +6,7 @@ XRC=$(XRC_PATH)/xrc
 OPT=-g -Fu$(XCL_PATH) -Fu$(XCL_PATH)/extra  -Fu./sourceview -Fu./icons
 FPC=fpc
 
-PAS_FILES =	exctrls.pas \
+PAS_FILES =    	exctrls.pas \
 		buffer.pas \
 		bufferlist.pas \
 		txtbuffer.pas \
@@ -15,33 +15,31 @@ PAS_FILES =	exctrls.pas \
 		compilermsg.pas \
 		executor.pas \
 		compiler.pas \
-		compilingdlg.pas \
-		project_opts.pas \
-		compiler_opts.pas \
-		editor_opts.pas \
+		frm_compiling.pas \
+		frm_projectopts.pas \
+		frm_compileropts.pas \
+		frm_editoropts.pas \
 		frm_newfile.pas \
 		frm_editfind.pas \
 		formatread.pas \
 		dbg.pas \
 		jitform.pas \
 		jitforms.pas \
-		main.pas \
 		propeditor.pas \
 		componentpalette.pas \
 		regcomps.pas \
 		xpr.pas \
+		frm_main.pas \
 		xde.pas
 
 
-FRM_FILES =     compiler_opts.frm \
-		editor_opts.frm \
-		project_opts.frm \
-		compilingdlg.frm \
+FRM_FILES =     frm_compileropts.frm \
+		frm_editoropts.frm \
+		frm_projectopts.frm \
+		frm_compiling.frm \
 		frm_newfile.frm \
 		frm_editfind.frm \
-		frmbuffer.frm \
-		txtbuffer.frm \
-		main.frm
+		frm_main.frm
 
 all: xde.o
 
